# cornerguard-ml

./: .gitattributes  .gitignore  README.md  cornerguard.ioc  pyproject.toml
.github/workflows/: pages.yml
.streamlit/: config.toml
apps/: dashboard.py
cornerguard_ml/: __init__.py  bicycle_model.py  dashboard.py  features.py  io.py  labeling.py  telemetry.py
include/: daq.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
scripts/: generate_sim_data.py  replay_inference.py  train_baseline.py
src/: daq.c  lsm6ds33.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  syscalls.c  system_stm32l4xx.c
tests/: test_dashboard.py  test_features_and_labels.py
website/: index.html
