[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cornerguard-ml"
version = "0.1.0"
description = "Predictive vehicle stability warning from racing telemetry"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ml = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]
xgboost = ["xgboost>=2.0"]
dashboard = [
  "pandas>=2.0",
  "plotly>=5.20",
  "streamlit>=1.35",
]
test = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["cornerguard_ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
